# BUA-CUA

./: .env.example  .gitignore  AGENTS.md  README.md  bua_cua.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
bua_cua_tools/: __init__.py  generate.py  intent.py  providers.py  recovery_cases.py  trace.py
inputs/arxiv-demo/: codegen.spec.ts  intent.md
inputs/clinic-demo/: codegen.spec.ts  intent.md  steps.md
prompts/: step_recovery_agent.md  task_skill_generation.md
recorder/: index.ts  types.ts
schemas/: skill.schema.json
skills/arxiv-demo/: SKILL.md  index.ts  skill.json
skills/clinic-demo/: INFERRED_INTENT.md  SKILL.md  index.ts  skill.json
skills/clinic-demo-byCodex/: INFERRED_INTENT.md  SKILL.md  index.ts  skill.json
skills/clinic-demo-byMiniMax-primaryFail/: API_PROBE.md  INFERRED_INTENT.md  SKILL.md  api_registry.json  index.ts  knowledge.json  skill.json
skills/clinic-demo-byQwen/: INFERRED_INTENT.md  index.ts  skill.json
skills/clinic-demo-byQwen3.6/: INFERRED_INTENT.md  SKILL.md
skills/clinic-demo-byQwen3.7/: INFERRED_INTENT.md  SKILL.md  index.ts  skill.json
skills/clinical_trials_download_recovery/: SKILL.md  index.ts  skill.json
skills/login_to_nms/: SKILL.md  index.ts  skill.json
skills/mock_interruption_handler/: INFERRED_INTENT.md  SKILL.md  index.ts  skill.json
skills/mock_query_eline_service_info/: INFERRED_INTENT.md  SKILL.md  index.ts  skill.json
skills/mock_recover_step_filter/: SKILL.md  index.ts  skill.json
skills/mock_table_filter_recovery/: SKILL.md  index.ts  skill.json
src/runtime/: api.ts  (+8 more)
(+18 files in other folders)
